--- a/app_server/views/travel.hbs
+++ b/app_server/views/travel.hbs
@@ -3,18 +3,27 @@
 {{#if trips}}
     {{#each trips}}
         <div class="destination">
-            <h2>{{this.title}}</h2>
+            <h2>{{this.name}}</h2>
             <div class="destination-content">
                 <div class="destination-text">
                     <p>{{this.description}}</p>
-                    <p class="price">Price: ${{this.price}}</p>
+                    <p><strong>Resort:</strong> {{this.resort}}</p>
+                    <p><strong>Duration:</strong> {{this.length}}</p>
+                    <p class="price"><strong>Price:</strong> ${{this.perPerson}} per person</p>
+                    <p><a href="/travel/{{this.code}}" class="btn btn-info">View Details</a></p>
                 </div>
                 <div class="destination-image">
-                    <img src="{{this.image}}" alt="{{this.title}}">
+                    <img src="{{this.image}}" alt="{{this.name}}">
                 </div>
             </div>
         </div>
     {{/each}}
 {{else}}
     <p>No trips available at the moment. Please check back later.</p>
+{{/if}}
+
+{{#if error}}
+    <div class="alert alert-danger">
+        {{error}}
+    </div>
 {{/if}} 
